# Software-Engineering-2024

./: .gitignore  README.md
Hw01-AI4Code_Research/: AI4Code调研报告.md  ResearchSummary.xlsx
Hw02-CombLogicSim/: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
Hw02-CombLogicSim/include/: circuit.h  config.h  exception.h  gates.h  utils.h
Hw02-CombLogicSim/src/: circuit.cpp  gates.cpp  utils.cpp
